Bugfix - colorpicker now displays correctly on firefox

--- a/style.css
+++ b/style.css
@@ -130,8 +130,7 @@ h1 {
 }
 
 .colorpicker::-webkit-color-swatch {
-    padding: 2px;
-    border-radius: 100%;
+    border-radius: 8px;
     border: none;
     border: 2px solid #4C6B9C;
     height: 100%;
@@ -140,7 +139,10 @@ h1 {
 }
 
 .colorpicker::-moz-color-swatch {
-    border-radius: 15px;
+    border-radius: 8px;
     border: none;
     border: 2px solid #4C6B9C;
+    height: 100%;
+    width: 100%;
+    padding: 0;
 }
